# web-assignment

./: README.md
backend/: db.sqlite3  pmid data.db  pyproject.toml
backend/project/: settings.py  urls.py
backend/web_assignment/: apps.py  models.py  serializers.py  views.py
backend/web_assignment/migrations/: 0001_initial.py  0002_alter_pmidkeywords_table.py
frontend/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: FinderComponent.jsx  Header.jsx  ManagerComponent.jsx
